Migrated gangland-domain, gangland-item and version-impl onto Keystone
Import rewrites onto keystone.bean, keystone.util, keystone.persistence, keystone.economy
and keystone.item; the repository contracts follow the persistence package move and
ItemDslAdapterTest follows the item package. version-impl's CompatibilitySetup uses
Keystone's ReflectionUtil, and the Version enum now documents that it lists only 1.20.5+
revisions because older servers resolve their adapter from the versioned CraftBukkit
package name.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SL2fpNXStRsn21A3zwDXBk